add highscore and fixed HTML

--- a/index.html
+++ b/index.html
@@ -99,8 +99,6 @@
             </div>
           </div>
         </section>
-      
-
         <!-- Card Body -->
         <section class="card-body">
           <!-- Quiz Introduction -->
@@ -129,17 +127,13 @@
           <!-- Quiz -->
           <section id="quiz">
             <h5 id="question">Question 1 xxx xxxx xxx xxx xxx xxx</h5>
-            <div class="row row-cols-1 row-cols-md-2">
+            <div class="align-items-center">
               <div class="col">
                 <div class="list-group mb-4" id="answers"></div>
               </div>
-              <div class="col">
-                <div id="image_area"></div>
               </div>
             </div>
           </section>
-
-
           <!-- All Done -->
           <section id="allDone">
             <div class="alert alert-success mt-0 mb-0">
