--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <!-- Quiz Introduction -->
           <section class="card bg-dark text-white" id="introduction">
             <img
-              src="./assets/images/header.jpg"
+              src="./assets/images/light-blue-box.png"
               class="card-img"
               alt="coding"
               id="intro-coding-img"
